--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Charles :-)"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -33,9 +33,23 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 ```{r}
 #1. 
 
+#make call to seq function, display to console
+seq_1_to_100 <- seq(1,100,4)
+seq_1_to_100
+
 #2. 
 
-#3. 
+#call mean and median functions, store in variables, display to console
+seq_mean <- mean(seq_1_to_100)
+seq_median <- median(seq_1_to_100)
+seq_mean
+seq_median
+
+#3.
+
+#use an ifelse() to check if stored mean is greater than median
+#print statemnts accordingly to console
+ifelse(seq_mean > seq_median, "Mean is greater", "Median is greater or equal to the mean")
 
 ```
 
@@ -51,20 +65,39 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 
+#String Vector of names
+names <- c("Bob", "Tom", "Jack", "Jill", "Jasmine")
+
+#number vector of scores
+scores <- c(87, 69, 50, 32, 45)
+
+#boolean vector with associated pass/fail 
+pass_fail <- c(TRUE, TRUE, TRUE, FALSE, FALSE)
+
+#generate data frame
+df = data.frame(names, scores, pass_fail)
+
 ```
 
 9.  QUESTION: How is this data frame different from a matrix?
 
-> Answer:
+> Answer: In a data frame, you can have different kinds of data, but in a matrix all elements must be the same data type.
 
-10. Create a function with an if/else statement. Your function should take a **vector** of test scores and print (not return) whether a given test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. 
+10. Create a function with an if/else statement. Your function should take a **vector** of test scores and print (not return) whether a given test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement.
 
 11. Apply your function to the vector with test scores that you created in number 5.
 
 ```{r}
 
+check_pass <- function(scores_input){
+  for (score in scores_input) {
+    ifelse(score>=50, print(TRUE), print(FALSE))
+  }
+}
+
+check_pass(scores)
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
-> Answer:
+> Answer: I used the ifelse() function nested in a for loop. For each score in the inputted vector of scores the ifelse() statement compared the score with 50. If the score was greater than or equal to the passing grade of 50 then TRUE was printed. Otherwise, FALSE was printed. I decided to use the ifelse() function rather than if{} else{} brackets for cleaner more concise code.
