--- a/Lessons/03_DataExploration_Part2.Rmd
+++ b/Lessons/03_DataExploration_Part2.Rmd
@@ -11,9 +11,10 @@ editor_options:
 ---
 
 ## Objectives
-1. Import and explore datasets in R
-2. Graphically explore datasets in R
-3. Apply data exploration skills to a real-world example dataset
+
+1.  Import and explore datasets in R
+2.  Graphically explore datasets in R
+3.  Apply data exploration skills to a real-world example dataset
 
 ## Opening discussion: why do we explore our data?
 
@@ -21,7 +22,7 @@ Why is data exploration our first step in analyzing a dataset? What information 
 
 ## Import data and view summaries
 
-```{r, message = FALSE}
+```{r message=FALSE}
 # 1. Set up your working directory
 getwd()
 
@@ -46,7 +47,6 @@ class(USGS.flow.data$datetime)
 
 ```
 
-
 ## Visualization for Data Exploration
 
 Although the `summary()` function is helpful in getting an idea of the spread of values in a numeric dataset, it can be useful to create visual representations of the data to help form hypotheses and direct downstream data analysis. Below is a summary of the useful types of graphs for data exploration.
@@ -55,7 +55,7 @@ Note: each of these approaches utilize the package "ggplot2". We will be coverin
 
 ### Bar Chart (function: geom_bar)
 
-Visualize count data for categorical variables. 
+Visualize count data for categorical variables.
 
 ```{r, fig.height = 3, fig.width = 4}
 ggplot(USGS.flow.data, aes(x = discharge.mean.approval)) +
@@ -92,9 +92,10 @@ ggplot(USGS.flow.data) +
   geom_histogram(aes(x = gage.height.mean))
 
 ```
+
 ### Frequency line graph (function: geom_freqpoly)
 
-An alternate to a histogram is a frequency polygon graph (distributions of values for continuous numerical variables). Instead of displaying bars,  counts of continuous variables are displayed as lines. This is advantageous if you want to display multiple variables or categories of variables at once.
+An alternate to a histogram is a frequency polygon graph (distributions of values for continuous numerical variables). Instead of displaying bars, counts of continuous variables are displayed as lines. This is advantageous if you want to display multiple variables or categories of variables at once.
 
 ```{r, fig.height = 3, fig.width = 4}
 #
@@ -111,17 +112,18 @@ ggplot(USGS.flow.data) +
   theme(legend.position = "top")
 
 ```
+
 ### Box-and-whisker plots (function: geom_boxplot, geom_violin)
 
-A box-and-whisker plot is yet another alternative to histograms (distributions of values for continuous numerical variables). These plots consist of: 
+A box-and-whisker plot is yet another alternative to histograms (distributions of values for continuous numerical variables). These plots consist of:
 
-* A box from the 25th to the 75th percentile of the data, called the interquartile range (IQR).
+-   A box from the 25th to the 75th percentile of the data, called the interquartile range (IQR).
 
-* A bold line inside the box representing the median value of the data. Whether the median is in the center or off to one side of the IQR will give you an idea about the skewness of your data.
+-   A bold line inside the box representing the median value of the data. Whether the median is in the center or off to one side of the IQR will give you an idea about the skewness of your data.
 
-* A line outside of the box representing values falling within 1.5 times the IQR. 
+-   A line outside of the box representing values falling within 1.5 times the IQR.
 
-* Points representing outliers, values that fall outside 1.5 times the IQR. 
+-   Points representing outliers, values that fall outside 1.5 times the IQR.
 
 An alternate option is a violin plot, which displays density distributions, somewhat like a hybrid of the box-and-whiskers and the frequency polygon plot.
 
@@ -141,6 +143,7 @@ ggplot(USGS.flow.data) +
 ```
 
 ### Scatterplot (function: geom_point)
+
 Visualize relationships between continuous numerical variables.
 
 ```{r, fig.height = 3, fig.width = 4}
@@ -153,21 +156,16 @@ ggplot(USGS.flow.data) +
 
 Question: under what circumstances would it be beneficial to use each of these graph types (bar plot, histogram, frequency polygon, box-and whisker, violin, scatterplot)?
 
-> Answer: 
+> Answer:
 
 ## Ending discussion
 
-What did you learn about the USGS discharge dataset today? What separate insights did the different graph types offer?
-> Answer: 
-
+What did you learn about the USGS discharge dataset today? What separate insights did the different graph types offer? \> Answer:
 
 How can multiple options for data exploration inform our understanding of our data?
 
-> Answer: 
-
+> Answer:
 
 Do you see any patterns in the USGS data for the Eno River? What might be responsible for those patterns and/or relationships?
 
-> Answer: 
-
-
+> Answer:
